--- a/src/styling/Navbar.module.scss
+++ b/src/styling/Navbar.module.scss
@@ -3,7 +3,9 @@
 
 .navwrapper{
     background-color:#0CADE0;
-    padding: 2rem 0rem;
+    color: white;
+    font-weight: bolder;
+    padding: 3rem 0rem;
     display: flex;
     justify-content: center;
     background: url('../assets/wave-haikei.svg');
