--- a/src/styling/Villagercard.module.scss
+++ b/src/styling/Villagercard.module.scss
@@ -15,10 +15,12 @@
         p{
             width: 90%;
             margin: 0;
+            font-family:monospace;
+            font-weight: 800;
             align-self: center;
         }
     
-
+    
     .villagericon{
         border-radius: 15%;
         border: 5px solid #D78A46;
@@ -30,6 +32,7 @@
         display: flex;
         align-self: center;
         align-items: center;
+     
     h2{
         font-size: 1rem;
     }
