--- a/src/styling/Homepage.module.scss
+++ b/src/styling/Homepage.module.scss
@@ -5,6 +5,7 @@
     align-items: center;
     gap: 2rem;
     padding: 4rem 0rem;
+    position: relative;
 }
 
 @media screen and (min-width: 800px) {
