--- a/src/styling/Filteringmodal.module.scss
+++ b/src/styling/Filteringmodal.module.scss
@@ -1,5 +1,7 @@
 .filterwrapactive{
-    background-color: rgb(0, 97, 65);
+    // background-color: rgb(0, 97, 65);
+    background: url('../assets/acnhbg.webp');
+    filter: blur(2px);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -10,6 +12,9 @@
     width: 80vw;
     img{
         transform: rotate(-180deg);
+        background-color: wheat;
+        width: min-content;
+        height: min-content;
     }
 }
 .filterwrap, .filterwrapactive{
@@ -22,13 +27,40 @@ img{
 }
 .filterlist{
     display: none;
+    z-index: 2;
     a{
         color: initial;
         text-decoration: none;
         color: wheat;
+        position: relative;
+        max-width: fit-content;
+        display: block;
+        cursor: pointer;
         &:active{
             color: black;
         }
+        h2{
+            max-width: fit-content;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            transform: scaleX(0);
+            height: 1.5px;
+            bottom: 0;
+            left: 0;
+            background-color:wheat;
+            transform-origin: bottom right;
+            transition: transform 0.25s ease-out;
+        }
+
+        &:hover::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+
+        }
+
     }
 }
 .filterlistactive{
