--- a/src/styling/AudioPlayer.module.scss
+++ b/src/styling/AudioPlayer.module.scss
@@ -1,3 +1,18 @@
-.audioduration{
+.audiowrapper{
+    .audioduration{
     display: flex;
+    position: relative;
+    background-color: aliceblue;
+    width: fit-content;
+
+    button{
+        all: unset;
+        cursor: pointer;
+        // padding: 2rem;
+        position: absolute;
+        margin-left: 45%;       
+        bottom: 20%;
+        font-size: 1.5rem;
+    }
+}
 }
