--- a/src/styling/Filteringmodal.module.scss
+++ b/src/styling/Filteringmodal.module.scss
@@ -1,7 +1,7 @@
 .filterwrapactive{
     // background-color: rgb(0, 97, 65);
-    background: url('../assets/acnhbg.webp');
-    filter: blur(2px);
+    background-image: url('../assets/acbg.webp');
+    background-size: cover;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -12,7 +12,6 @@
     width: 80vw;
     img{
         transform: rotate(-180deg);
-        background-color: wheat;
         width: min-content;
         height: min-content;
     }
