Filtering is now done from filter component with small bugs

--- a/src/styling/Navbar.module.scss
+++ b/src/styling/Navbar.module.scss
@@ -5,7 +5,7 @@
     background-color:#0CADE0;
     color: white;
     font-weight: bolder;
-    padding: 3rem 0rem;
+    padding: 3rem 0rem 0rem 0rem;
     display: flex;
     justify-content: center;
     background: url('../assets/wave-haikei.svg');
