--- a/src/styling/Categories.module.scss
+++ b/src/styling/Categories.module.scss
@@ -10,12 +10,18 @@
         font-weight: bolder;
         flex-direction: column;
         align-items: center;
+        a{
+            color: inherit;
+            text-decoration: none;
+            font-size: 20px;
+        }
         // flex-wrap: wrap;
         li{
             cursor: pointer;
+            padding: 1rem 0rem;
             a.active{
                 color: aliceblue;
-           all: unset;               
+                all: unset;               
             }
         }
     }
