--- a/src/styling/AudioPlayer.module.scss
+++ b/src/styling/AudioPlayer.module.scss
@@ -1,17 +1,17 @@
 .audiowrapper{
     position: absolute;
     bottom: 0;
-    width: 137%;
+    width: 100%;
     display: flex;
+    transition: 500ms;
     .audioduration{
     display: flex;
     width: 100%;
     position: relative;
-    background-color: aliceblue;
+    background-color: rgba(0, 0, 0, 0.356);
 
 input{
     width: 100%;
-
 }
     button{
         all: unset;
@@ -23,4 +23,7 @@ input{
         font-size: 1.5rem;
     }
 }
+}
+.audiohover{
+    transition: 1000ms;
 }
