--- a/src/styling/Songcard.module.scss
+++ b/src/styling/Songcard.module.scss
@@ -1,17 +1,37 @@
 .songcardwrapper {
+    width: 85%;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+
+    &:hover .imageholder img {
+        -moz-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+
     .imageandplayer {
         position: relative;
-        width: 50%;
+        box-sizing: border-box;
+        max-width: 100%;
+        height: 60%;
+        overflow: hidden;
 
-        .songcover {}
+        .imageholder {
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+
+            img {
+                transition: 300ms;
+                max-width: 100%;
+            }
+        }
 
     }
 
-    .audioplayer {}
-
     .priceandimg {
         display: flex;
-        img{
+
+        img {
             width: 40px;
             height: 40px;
         }
