--- a/src/styling/Songcard.module.scss
+++ b/src/styling/Songcard.module.scss
@@ -1,6 +1,10 @@
 .songcardwrapper {
     width: 85%;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+   p{
+    font-family: 'Open Sans';
+    font-weight: 700;
+   } 
 
     &:hover .imageholder img {
         -moz-transform: scale(1.1);
