--- a/src/styling/Homepage.module.scss
+++ b/src/styling/Homepage.module.scss
@@ -1,5 +1,5 @@
 .homewrapper{
-    background-color: #FFF3E8;
+ //background-color: #FFF3E8;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,12 +15,9 @@
     display: grid;
     row-gap: 2rem;
     // grid-template-columns: 5fr 5fr 5fr 5fr;
-    
     grid-template-columns: repeat(4, 1fr);
-
     grid-auto-rows: 1fr;
     place-items: center;
-
     align-items: flex-start;
    }
   }
