--- a/src/styling/Navbar.module.scss
+++ b/src/styling/Navbar.module.scss
@@ -6,9 +6,12 @@
     color: white;
     font-weight: bolder;
     padding: 3rem 0rem 0rem 0rem;
-    display: flex;
+    display: flex;  
+    font-size: 20px;
+
     justify-content: center;
     background: url('../assets/wave-haikei.svg');
+
 
     h1{
         text-align: center;
