--- a/src/styling/Categories.module.scss
+++ b/src/styling/Categories.module.scss
@@ -16,7 +16,8 @@
             font-size: 20px;
         }
         // flex-wrap: wrap;
-        li{
+        li{        font-size: 20px;
+
             cursor: pointer;
             padding: 1rem 0rem;
             a.active{
