--- a/src/styling/Homepage.module.scss
+++ b/src/styling/Homepage.module.scss
@@ -4,20 +4,44 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    padding: 4rem 0rem;
+    padding: 3rem 1rem;
     position: relative;
-}
 
-@media screen and (min-width: 800px) {
-   .homewrapper{
-    width: 80%;
+
+}    .sortingholder{
+      display:flex;
+      width:95%;
+      justify-content:flex-end;
+      align-items: flex-end;
+    }
+@media screen and (min-width: 500px) {
+  .homewrapper{
+    width: 95%;
     margin: auto;
     display: grid;
-    row-gap: 2rem;
-    // grid-template-columns: 5fr 5fr 5fr 5fr;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 1fr;
+    row-gap: 5rem;
+    grid-template-columns: repeat(2, 1fr);
     place-items: center;
-    align-items: flex-start;
+    align-items: flex-start;    
+  }
+  .sortingholder{
+    width: 95%;
+  }
+}
+@media screen and (min-width: 840px){
+  .homewrapper{
+
+    grid-template-columns: repeat(3, 1fr);
+
    }
+}
+@media screen and (min-width: 1025px) {
+   .homewrapper{
+    width: 80%;
+    grid-template-columns: repeat(4, 1fr);
+
+   }
+   .sortingholder{
+    width: 90%;
+  }
   }
