--- a/src/styling/SeacreatureCard.module.scss
+++ b/src/styling/SeacreatureCard.module.scss
@@ -1,93 +1,51 @@
 
-.card{
-    margin: 100px auto 0;
-    width: 400px;
-    height: 600px;
-    perspective: 1000px;
-    .cardInner{
-        width: 100%;
-        height: 100%;
-        transition: transform 1s;
-        transform-style: preserve-3d;
-        cursor: pointer;
-        position: relative;
-        .cardFace{
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            overflow: hidden;
-            border-radius: 16px;
-            box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
-        }
-        .cardFaceFront{
-            background-image: linear-gradient(to bottom right, rgb(173, 90, 221), rgb(87, 15, 129) );
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .cardFaceBack{
-            transform: rotateY(180deg);
-            background-color: aqua;
-        }
-        .cardContent{
-            width: 100%;
-            height: 100%;
-            .cardHeader{
-                position: relative;
-                padding: 30px 30px 40px;
-                &::after{
-                    content: '';
-                    display: block;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    bottom: 0;
-                    background-image: linear-gradient(to bottom left, rgb(171, 141, 189) 10%, rgb(190, 136, 221) 115%);
-                    z-index: -1;
-                    border-radius: 0px 0px 50% 0px;
-                }
-            }
-        }
-    }
-    .cardInner.isFlipped{
-        transform: rotateY(180deg);
 
-    }
-
-}
 .seacardwrapper {
+    gap: 1rem;
     display: flex;
     flex-direction: column;
     border-radius: 12px;
-    border: 4px solid orange;
+   // border: 4px solid orange;
     position: relative;
     font-family: 'Poppins';
     padding: 1.2rem 0.5rem 2rem 0.5rem;
-    font-size: .8em;
-    perspective: 1000px;
+    font-size: .7em;
+    letter-spacing: spacing 4px; 
+    //min-height: 100%;
+    min-height: 646px;
+    flex-grow: 0;
+    box-sizing: border-box;
 
-    &>section {
-        position: relative;
-        gap: 3rem;
+    background-color: rgb(250, 243, 235);
+    box-shadow: rgba(255, 166, 0, 0.205) 1.95px 1.95px 2.6px;
+    .iconholder {
+        // position: absolute;
+        width: 100%;
+        height: 30%;
+        align-self: center;
+        justify-self: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-        span {
-
-
-            img {
-                max-width: 35px;
-                min-width: 35px;
-                min-height: 35px;
-                max-height: 35px;
-            }
-        }
+    h1 {
+        text-align: center;
+        font-family: 'Italiana';
+        font-size: 28px;
+    }
+        img {
+            // width: 100%;
+            // height: 100%;
+            width: 45%;
+            height: 50%;
+       
+    }
     }
 
     .flexed {
         display: flex;
         align-items: flex-start !important;
+        padding: 0.2rem 0rem;
 
         h2 {
             margin: 0;
@@ -95,25 +53,19 @@
         }
     }
 
-
-    h1 {
-        text-align: center;
-        font-family: 'Italiana';
-        font-size: 28px;
+    span {
+        img {
+            max-width: 30px;
+            min-width: 30px;
+            min-height: 30px;
+            max-height: 30px;
+        }
     }
+
 
     .monthsAndIcons {
         display: flex;
         flex-direction: column;
-
-        .calender {
-            display: flex;
-            align-items: flex-start;
-
-            h2 {
-                margin: 0;
-            }
-        }
 
         .months {
             margin: 0px 35px;
@@ -123,12 +75,10 @@
             padding: 0rem 1rem;
             box-sizing: border-box;
 
-
         }
 
         span {
             display: flex;
-            // justify-content: center;
             align-items: center;
 
             img {
@@ -137,19 +87,85 @@
         }
     }
 
-    .iconholder {
-        // position: absolute;
-        width: 45%;
-        height: 50%;
-        align-self: center;
-        justify-self: center;
-        margin: auto;
 
-        img {
-            width: 100%;
-            height: 100%;
+
+
+    .togglebutton {
+        all: unset;
+        font-family: inherit;
+        cursor: pointer;
+        // padding: 0.5rem 1rem;
+        justify-self: flex-end;
+        align-self: flex-end;
+        margin-right: 35px;
+        margin-top: auto;
+
+        font-size: 12px;
+        border: 0.3em solid orange;
+        color: orange;
+        border-radius: 0.5em;
+        padding: 0.5rem 1rem;
+        font-weight: bold;
+        letter-spacing: 0.1em;
+        position: relative;
+        overflow: hidden;
+        z-index: 1;
+        transition: 0.5s;
+
+        span {
+        position: absolute;
+        width: 25%;
+        height: 100%;
+        background-color: orange;
+        transform: translateY(150%);
+        border-radius: 50%;
+        left: calc((var(--n) - 1) * 25%);
+        transition: 0.5s;
+        transition-delay: calc((var(--n) - 1) * 0.1s);
+        z-index: -1;
+      }
+
+      &:hover{
+        color: black;
+        & span{
+            transform: translateY(0) scale(2);
+
         }
-    }
+      }
+   
+      &:active{
+        color: white;
 
+      }
+
+      & span:nth-child(1) {
+        --n: 1;
+      }
+      
+      & span:nth-child(2) {
+        --n: 2;
+      }
+      
+      & span:nth-child(3) {
+        --n: 3;
+      }
+      
+      & span:nth-child(4) {
+        --n: 4;
+      }
+
+      }
+      
+   
  
-}
+   
+      
+  
+
+     
+
+
+}  
+   .bugwrapper{
+        min-height: 650px;
+    }
