--- a/src/styling/AudioPlayer.module.scss
+++ b/src/styling/AudioPlayer.module.scss
@@ -4,6 +4,7 @@
     width: 100%;
     display: flex;
     transition: 500ms;
+    color: white;
     .audioduration{
     display: flex;
     width: 100%;
@@ -14,17 +15,17 @@
         width: 100%;
        // -webkit-appearance: none;
         cursor: pointer;
-        margin: 0;
+       // margin: 0;
         border: none;
-        padding: 0;
+        //padding: 0;
        // background-color: #505050ce;
-        accent-color: #505050;
+      //  accent-color: #505050;
 
         height: 4px;
        transform: translateY(24.5px);
-    //    &::-webkit-slider-runnable-track{
-    //     background: transparent;
-    //    }
+      //  &::-webkit-slider-runnable-track{
+      //   background: transparent;
+      //  }
     //    &::-webkit-slider-thumb{
     //     background: brown;
     //    }
@@ -39,21 +40,21 @@
        
     }
 
-    input::-webkit-slider-runnable-track {
-        background: #fff;
-      }
+    // input::-webkit-slider-runnable-track {
+    //     background: #fff;
+    //   }
       
-      input::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        width: 12px;
-        height: 12px;
-        //background: #505050ce;
-        border: 1px solid #000;
-        border-radius: 50%;
-        margin-top: -4px;
-        cursor: pointer;
-      }
+      // input::-webkit-slider-thumb {
+      //   -webkit-appearance: none;
+      //   appearance: none;
+      //   width: 12px;
+      //   height: 12px;
+      //   //background: #505050ce;
+      //   border: 1px solid #000;
+      //   border-radius: 50%;
+      //   margin-top: -4px;
+      //   cursor: pointer;
+      // }
 
  
 
@@ -63,9 +64,10 @@
         // padding: 2rem;
         position: absolute;
         margin-left: 45%;       
-        bottom: 20%;
+        bottom: 19%;
         font-size: 1.5rem;
         z-index: 1;
+        color: black;
     }
 }
 }
