--- a/src/styling/Categories.module.scss
+++ b/src/styling/Categories.module.scss
@@ -13,17 +13,23 @@
         a{
             color: inherit;
             text-decoration: none;
-            font-size: 20px;
+            font-size: 18px;
+            border-radius: 16px;
+            height: fit-content;
+            transition: 200ms ease-in-out;
+            &:hover{
+                background: rgb(222 184 135 / 61%);
+            }
         }
         // flex-wrap: wrap;
-        li{        font-size: 20px;
+        li{        font-size: 18px;
 
             cursor: pointer;
             padding: 1rem 0rem;
-            a.active{
-                color: aliceblue;
-                all: unset;               
-            }
+            background: #deb8873d;
+            border-radius: 16px;
+            padding: 1rem 2rem;
+
         }
     }
 }
