--- a/src/styling/SeacreatureCard.module.scss
+++ b/src/styling/SeacreatureCard.module.scss
@@ -1,16 +1,14 @@
-
-
 .seacardwrapper {
     gap: 1rem;
     display: flex;
     flex-direction: column;
     border-radius: 12px;
-   // border: 4px solid orange;
+    // border: 4px solid orange;
     position: relative;
     font-family: 'Poppins';
     padding: 1.2rem 0.5rem 2rem 0.5rem;
     font-size: .7em;
-    letter-spacing: spacing 4px; 
+    letter-spacing: spacing 4px;
     //min-height: 100%;
     min-height: 646px;
     flex-grow: 0;
@@ -18,6 +16,7 @@
 
     background-color: rgb(250, 243, 235);
     box-shadow: rgba(255, 166, 0, 0.205) 1.95px 1.95px 2.6px;
+
     .iconholder {
         // position: absolute;
         width: 100%;
@@ -28,28 +27,32 @@
         flex-direction: column;
         align-items: center;
 
-    h1 {
-        text-align: center;
-        font-family: 'Italiana';
-        font-size: 28px;
-    }
+        h1 {
+            text-align: center;
+            font-family: 'Italiana';
+            font-size: 24px;
+        }
+
         img {
             // width: 100%;
             // height: 100%;
             width: 45%;
             height: 50%;
-       
-    }
+
+        }
     }
 
     .flexed {
         display: flex;
-        align-items: flex-start !important;
+        align-items: center;
         padding: 0.2rem 0rem;
 
         h2 {
             margin: 0;
             padding-left: 0.6rem;
+            font-weight: 100;
+            display: flex;
+            align-items: center;
         }
     }
 
@@ -113,59 +116,52 @@
         transition: 0.5s;
 
         span {
-        position: absolute;
-        width: 25%;
-        height: 100%;
-        background-color: orange;
-        transform: translateY(150%);
-        border-radius: 50%;
-        left: calc((var(--n) - 1) * 25%);
-        transition: 0.5s;
-        transition-delay: calc((var(--n) - 1) * 0.1s);
-        z-index: -1;
-      }
+            position: absolute;
+            width: 25%;
+            height: 100%;
+            background-color: orange;
+            transform: translateY(150%);
+            border-radius: 50%;
+            left: calc((var(--n) - 1) * 25%);
+            transition: 0.5s;
+            transition-delay: calc((var(--n) - 1) * 0.1s);
+            z-index: -1;
+        }
 
-      &:hover{
-        color: black;
-        & span{
-            transform: translateY(0) scale(2);
+        &:hover {
+            color: black;
+
+            & span {
+                transform: translateY(0) scale(2);
+
+            }
+        }
+
+        &:active {
+            color: white;
 
         }
-      }
-   
-      &:active{
-        color: white;
 
-      }
+        & span:nth-child(1) {
+            --n: 1;
+        }
 
-      & span:nth-child(1) {
-        --n: 1;
-      }
-      
-      & span:nth-child(2) {
-        --n: 2;
-      }
-      
-      & span:nth-child(3) {
-        --n: 3;
-      }
-      
-      & span:nth-child(4) {
-        --n: 4;
-      }
+        & span:nth-child(2) {
+            --n: 2;
+        }
 
-      }
-      
-   
- 
-   
-      
-  
+        & span:nth-child(3) {
+            --n: 3;
+        }
 
-     
+        & span:nth-child(4) {
+            --n: 4;
+        }
 
-
-}  
-   .bugwrapper{
-        min-height: 650px;
     }
+
+}
+
+.bugwrapper {
+    min-height: 650px;
+}
