--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   font-family: initial;
-  margin-bottom: 5rem;
+  margin:7rem 0rem;
   font-size: .5rem;
   gap: 10px;
   justify-self: center;
