--- a/src/styling/Categories.module.scss
+++ b/src/styling/Categories.module.scss
@@ -7,6 +7,7 @@
         list-style: none;
         justify-content: space-between;
         padding: 2rem 0rem;
+
         font-weight: bolder;
         flex-direction: column;
         align-items: center;
@@ -16,19 +17,20 @@
             font-size: 18px;
             border-radius: 16px;
             height: fit-content;
+            margin: 0.5rem 0rem; 
+
             transition: 200ms ease-in-out;
             &:hover{
                 background: rgb(222 184 135 / 61%);
             }
         }
         // flex-wrap: wrap;
-        li{        font-size: 18px;
-
+        li{      
+            font-size: 18px;
             cursor: pointer;
-            padding: 1rem 0rem;
             background: #deb8873d;
             border-radius: 16px;
-            padding: 1rem 2rem;
+            padding: .8rem 2rem;
 
         }
     }
