--- a/src/styling/Homepage.module.scss
+++ b/src/styling/Homepage.module.scss
@@ -19,6 +19,8 @@
 
 .sortingholderhome {
   display: flex;
+  width: 80%;
+  margin: auto;
 
   justify-content: space-between;
   align-items: center;
