--- a/src/styling/Homepage.module.scss
+++ b/src/styling/Homepage.module.scss
@@ -33,7 +33,7 @@
     display: grid;
     row-gap: 5rem;
     grid-template-columns: repeat(2, 1fr);
-    place-items: center;
+   // place-items: center;
     align-items: flex-start;
   }
 
