--- a/src/styling/Searchbar.module.scss
+++ b/src/styling/Searchbar.module.scss
@@ -1,9 +1,15 @@
 .searchholder{
 display: flex;
 justify-content: center;
-width: 100%;
+//width: 100%;
+height: min-content;
+width: fit-content;
+margin: auto;
 // transform:translateY(-250%);
-margin: 3rem 0rem;
+margin-bottom: 3rem;
+margin-top: 3rem;
+position: relative;
+
 
 .input{
     border-radius: 12px;
@@ -20,4 +26,19 @@ margin: 3rem 0rem;
 
     }
 }
+.searchbutton{
+    all: unset;
+position: absolute;
+right: 10px;
+top: 10px;
+&:focus{
+    font-weight: 800;
+    color: black;    filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
+
+}
+
+
+ 
+}
+
 }
