--- a/src/styling/Homepage.module.scss
+++ b/src/styling/Homepage.module.scss
@@ -41,7 +41,7 @@
     width: 95%;
   }
   .sortingholderhome {
-    width: 88%;
+    width: 81%;
     margin: auto;
   }
 }
@@ -52,12 +52,12 @@
 
   }
   .sortingholderhome {
-    width: 90%;
+    width: 86%;
     margin: auto;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1024px) {
   .homewrapper {
     width: 80%;
     grid-template-columns: repeat(4, 1fr);
@@ -72,4 +72,12 @@
     width: 77%;
     margin: auto;
   }
+}
+@media screen and (min-width: 1124px){
+  
+  .sortingholderhome {
+    width: 74%;
+    margin: auto;
+  }
+
 }
