--- a/src/styling/AboutPage.module.scss
+++ b/src/styling/AboutPage.module.scss
@@ -8,6 +8,7 @@
     max-width: 90%;
     line-height: 28px;
     padding: .7rem 0rem;
+    margin: auto;
   }
 }
 @media screen and (min-width:700px) {
