cleaned up code

--- a/src/styling/AudioPlayer.module.scss
+++ b/src/styling/AudioPlayer.module.scss
@@ -13,7 +13,7 @@
 
     input{
         width: 100%;
-       // -webkit-appearance: none;
+      //  -webkit-appearance: none;
         cursor: pointer;
        // margin: 0;
         border: none;
@@ -26,9 +26,11 @@
       //  &::-webkit-slider-runnable-track{
       //   background: transparent;
       //  }
-    //    &::-webkit-slider-thumb{
-    //     background: brown;
-    //    }
+      //  &::-webkit-slider-thumb{
+      
+
+      //   background: brown;
+      //  }
     //    &::-moz-range-track{
     //     background: brown;
 
@@ -49,7 +51,7 @@
       //   appearance: none;
       //   width: 12px;
       //   height: 12px;
-      //   //background: #505050ce;
+      //   background-color: #505050ce;
       //   border: 1px solid #000;
       //   border-radius: 50%;
       //   margin-top: -4px;
