padding fixed for birthday section

--- a/src/styling/Villagercard.module.scss
+++ b/src/styling/Villagercard.module.scss
@@ -27,10 +27,13 @@
             align-self: center;
         }
         .birthday{
-            gap: 0.5rem;
+            gap: 0.7rem;
             background-color: #d78a4662;
-            padding: 0.2rem;
+            padding: 0.2rem 0.8rem;
+           // min-width:70%;
             border-radius: 12px;
+           // justify-content: center;
+
             // align-items: center;
         }
     
